--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-¸ùÄ¿Â¼ÏÂ
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>æ ‡é¢˜</title>
+<link rel="stylesheet" href="base.css" />
+</head>
+<body>
+å†…å®¹
+</body>
+</html>
