king  && king static

--- a/index.html
+++ b/index.html
@@ -2,10 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>标题</title>
-<link rel="stylesheet" href="base.css" />
+<title>King</title>
+<link rel="shortcut icon" type="image/x-icon" href="/imgserver/king.ico" />
+<link rel="stylesheet" href="/static/css/base.css" />
+<link rel="stylesheet" href="/static/css/king/common.css" />
+<script src="/static/js/jquery-1.9.0.min.js"></script>
 </head>
 <body>
-内容的 修改
+<div class="w-bar fn-mt10">
+	<div class="u-head fn-clear">
+		<div class="logo kinglogo"></div>
+		<ul class="nav fn-clear fn-mt20">
+			<li class="current"><a href="/">开发日志</a></li>
+			<li><a href="king.html">系统工具</a></li>
+			<li><a href="#">解决方案</a></li>
+			<li><a href="#">项目案例</a></li>
+		</ul>
+	</div>
+</div>
+<div class="w-bar fn-mt10">
+	<div class="u-main">
+		<div class="fn-clear">
+			<div class="title">样式调用：</div>
+			<div class="date">2013.02.22</div>
+		</div>
+		<div class="note fn-mt10">dddddddd</div>
+		<div class="fn-clear fn-mt20">
+			<div class="title">创建KingStatic</div>
+			<div class="date">2013.02.22</div>
+		</div>
+		<div class="note fn-mt10">KingStatic用于提供前端基本CSS样式、JS框架，以及一些组件服务。</div>
+	</div>
+</div>
+<div class="u-foot fn-clear">
+	<div class="fn-left">http://fwowo.github.com</div>
+	<div class="fn-right">xjia.jin@gmail.com</div>
+</div>
 </body>
 </html>
