--- a/king.html
+++ b/king.html
@@ -6,6 +6,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="/imgserver/king.ico" />
 <link rel="stylesheet" href="/static/css/base.css" />
 <link rel="stylesheet" href="/static/css/king/common.css" />
+<link rel="stylesheet" href="/static/css/king/king.css" />
 <script src="/static/js/jquery-1.9.0.min.js"></script>
 </head>
 <body>
@@ -13,10 +14,10 @@
 	<div class="u-head fn-clear">
 		<div class="logo kinglogo"></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li><a href="/">开发日志</a></li>
+			<li><a href="index.html">开发日志</a></li>
 			<li class="current"><a href="king.html">系统工具</a></li>
-			<li><a href="#">解决方案</a></li>
-			<li><a href="#">项目案例</a></li>
+			<li><a href="solution.html">解决方案</a></li>
+			<li><a href="case.html">项目案例</a></li>
 		</ul>
 	</div>
 </div>
