--- a/kingstatic/style.html
+++ b/kingstatic/style.html
@@ -13,8 +13,8 @@
 	<div class="u-head fn-clear">
 		<div class="logo"><span>Static Server</span></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li class="current"><a href="index.html">底层</a></li>
-			<li><a href="style.html">样式库</a></li>
+			<li><a href="index.html">底层</a></li>
+			<li class="current"><a href="style.html">样式库</a></li>
 			<li><a href="module.html">组件</a></li>
 			<li><a href="img.html">公用图片</a></li>
 		</ul>
@@ -22,16 +22,8 @@
 </div>
 <div class="w-bar fn-mt10">
 	<div class="u-main">
-		<h2><span>CSS底层</span> / base.css</h2>
-		<div class="title fn-mt10">样式调用：</div>
-		<div class="code fn-mt10"><xmp><link rel="stylesheet" href="http://fwowo.github.com/static/css/base.css" /></xmp></div>
-	</div>
-</div>
-<div class="w-bar fn-mt10">
-	<div class="u-main">
-		<h2><span>JS框架</span> / jQuery</h2>
-		<div class="title fn-mt10">脚本调用：</div>
-		<div class="code fn-mt10"><xmp><script src="http://fwowo.github.com/static/js/jquery-1.9.0.min.js"></script></xmp></div>
+		<div class="title">样式库：</div>
+		<div class="note">note</div>
 	</div>
 </div>
 <div class="u-foot fn-clear">
