--- a/solution.html
+++ b/solution.html
@@ -13,9 +13,9 @@
 	<div class="u-head fn-clear">
 		<div class="logo kinglogo"></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li class="current"><a href="index.html">开发日志</a></li>
+			<li><a href="index.html">开发日志</a></li>
 			<li><a href="king.html">系统工具</a></li>
-			<li><a href="solution.html">解决方案</a></li>
+			<li class="current"><a href="solution.html">解决方案</a></li>
 			<li><a href="case.html">项目案例</a></li>
 		</ul>
 	</div>
@@ -28,10 +28,10 @@
 		</div>
 		<div class="note fn-mt10">dddddddd</div>
 		<div class="fn-clear fn-mt20">
-			<div class="title">创建KingStatic</div>
-			<div class="date">2013.02.22</div>
+			<div class="title"><a target="_blank" href="/solution/20130225.html">&gt; 页面的拆分与重建</a></div>
+			<div class="date">2013.02.25</div>
 		</div>
-		<div class="note fn-mt10">KingStatic用于提供前端基本CSS样式、JS框架，以及一些组件服务。</div>
+		<div class="note fn-mt10">每个项目都应该做拆分的操作，至少要把框架、头尾独立出来，因为这些在项目里是公用的且频繁使用的。将之分离出来的这部分代码文件，我们称之为母版，剩余的那部称之为子版。项目里的页面便由子版套用母版的模式完成，由此我们对此项目便可更好的进行管理。</div>
 	</div>
 </div>
 <div class="u-foot fn-clear">
