--- a/kingstatic/index.html
+++ b/kingstatic/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
+<meta charset="gb2312" />
 <title>King Static</title>
 <link rel="shortcut icon" type="image/x-icon" href="/imgserver/king.ico" />
 <link rel="stylesheet" href="/static/css/base.css" />
 <link rel="stylesheet" href="/static/css/king/common.css" />
-<script src="/static/js/jquery-1.9.0.min.js"></script>
+
 </head>
 <body>
 <div class="w-bar fn-mt10">
 	<div class="u-head fn-clear">
 		<div class="logo"><span>Static Server</span></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li class="current"><a href="index.html">åº•å±‚</a></li>
-			<li><a href="style.html">æ ·å¼åº“</a></li>
-			<li><a href="module.html">ç»„ä»¶</a></li>
-			<li><a href="img.html">å…¬ç”¨å›¾ç‰‡</a></li>
+			<li class="current"><a href="index.html">µ×²ã</a></li>
+			<li class=""><a href="style.html">ÑùÊ½¿â</a></li>
+			<li class=""><a href="module.html">×é¼ş</a></li>
+			<li class=""><a href="png.html">¹«ÓÃÍ¼Æ¬</a></li>
 		</ul>
 	</div>
 </div>
 <div class="w-bar fn-mt10">
 	<div class="u-main">
-		<h2><span>CSSåº•å±‚</span> / base.css</h2>
-		<div class="title fn-mt10">æ ·å¼è°ƒç”¨ï¼š</div>
+		<h2><span>CSSµ×²ã</span> / base.css</h2>
+		<div class="title fn-mt10">ÑùÊ½µ÷ÓÃ£º</div>
 		<div class="code fn-mt10"><xmp><link rel="stylesheet" href="http://fwowo.github.com/static/css/base.css" /></xmp></div>
 	</div>
 </div>
 <div class="w-bar fn-mt10">
 	<div class="u-main">
-		<h2><span>JSæ¡†æ¶</span> / jQuery</h2>
-		<div class="title fn-mt10">è„šæœ¬è°ƒç”¨ï¼š</div>
+		<h2><span>JS¿ò¼Ü</span> / jQuery</h2>
+		<div class="title fn-mt10">½Å±¾µ÷ÓÃ£º</div>
 		<div class="code fn-mt10"><xmp><script src="http://fwowo.github.com/static/js/jquery-1.9.0.min.js"></script></xmp></div>
 	</div>
 </div>
@@ -38,5 +38,7 @@
 	<div class="fn-left">http://fwowo.github.com</div>
 	<div class="fn-right">xjia.jin@gmail.com</div>
 </div>
+<script src="/static/js/jquery-1.9.0.min.js"></script>
+
 </body>
 </html>
