--- a/kingstatic/module.html
+++ b/kingstatic/module.html
@@ -6,32 +6,28 @@
 <link rel="shortcut icon" type="image/x-icon" href="/imgserver/king.ico" />
 <link rel="stylesheet" href="/static/css/base.css" />
 <link rel="stylesheet" href="/static/css/king/common.css" />
-
+<link rel="stylesheet" href="/static/css/kingstatic/module.css" />
 </head>
 <body>
 <div class="w-bar fn-mt10">
 	<div class="u-head fn-clear">
 		<div class="logo"><span>Static Server</span></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li class="current"><a href="/kingstatic/index.html">底层</a></li>
+			<li class=""><a href="/kingstatic/index.html">底层</a></li>
 			<li class=""><a href="/kingstatic/style.html">样式库</a></li>
-			<li class=""><a href="/kingstatic/module.html">组件</a></li>
+			<li class="current"><a href="/kingstatic/module.html">组件</a></li>
 			<li class=""><a href="/kingstatic/png.html">公用图片</a></li>
 		</ul>
 	</div>
 </div>
 <div class="w-bar fn-mt10">
-	<div class="u-main">
-		<h2><span>CSS底层</span> / base.css</h2>
-		<div class="title fn-mt10">样式调用：</div>
-		<div class="code fn-mt10"><xmp><link rel="stylesheet" href="http://fwowo.github.com/static/css/base.css" /></xmp></div>
-	</div>
-</div>
-<div class="w-bar fn-mt10">
-	<div class="u-main">
-		<h2><span>JS框架</span> / jQuery</h2>
-		<div class="title fn-mt10">脚本调用：</div>
-		<div class="code fn-mt10"><xmp><script src="http://fwowo.github.com/static/js/jquery-1.9.0.min.js"></script></xmp></div>
+	<div class="u-module">
+		<div class="fn-clear">
+			<div class="title">播放器：</div>
+			<a target="_blank" href="module/jwplayer.html">jwplayer</a>
+			<a target="_blank" href="module/ckplayer.html">ckplayer</a>
+			<a target="_blank" href="module/wmvplayer.html">wmvplayer</a>
+		</div>
 	</div>
 </div>
 <div class="u-foot fn-clear">
