--- a/kingstatic/module/jwplayer.html
+++ b/kingstatic/module/jwplayer.html
@@ -13,25 +13,30 @@
 	<div class="u-head fn-clear">
 		<div class="logo"><span>Static Server</span></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li class="current"><a href="/kingstatic/index.html">底层</a></li>
+			<li class=""><a href="/kingstatic/index.html">底层</a></li>
 			<li class=""><a href="/kingstatic/style.html">样式库</a></li>
-			<li class=""><a href="/kingstatic/module.html">组件</a></li>
+			<li class="current"><a href="/kingstatic/module.html">组件</a></li>
 			<li class=""><a href="/kingstatic/png.html">公用图片</a></li>
 		</ul>
 	</div>
 </div>
 <div class="w-bar fn-mt10">
 	<div class="u-main">
-		<h2><span>CSS底层</span> / base.css</h2>
-		<div class="title fn-mt10">样式调用：</div>
-		<div class="code fn-mt10"><xmp><link rel="stylesheet" href="http://fwowo.github.com/static/css/base.css" /></xmp></div>
-	</div>
-</div>
-<div class="w-bar fn-mt10">
-	<div class="u-main">
-		<h2><span>JS框架</span> / jQuery</h2>
-		<div class="title fn-mt10">脚本调用：</div>
-		<div class="code fn-mt10"><xmp><script src="http://fwowo.github.com/static/js/jquery-1.9.0.min.js"></script></xmp></div>
+		<h2><span>jwplayer</span> / 播放器</h2>
+		<div class="fn-mt20">
+			<div id="player"></div>
+		</div>
+		<div class="code fn-mt20">
+<xmp><script src="http://fwowo.github.com/static/jwplayer/jwplayer.js"></script>
+<script>
+jwplayer("player").setup({
+	file: "http://movie.ks.js.cn/flv/2011/11/8-1.flv",
+	image: "http://www.ckplayer.com/images/loadimg.jpg",
+	width: "600",
+	height: "400"
+});
+</script></xmp>
+		</div>
 	</div>
 </div>
 <div class="u-foot fn-clear">
@@ -39,6 +44,6 @@
 	<div class="fn-right">xjia.jin@gmail.com</div>
 </div>
 <script src="/static/js/jquery-1.9.0.min.js"></script>
-
+<script src="/static/jwplayer/jwplayer.js"></script><script src="/static/js/kingstatic/jwplayer.js"></script>
 </body>
 </html>
