--- a/kingstatic/module/wmvplayer.html
+++ b/kingstatic/module/wmvplayer.html
@@ -13,25 +13,26 @@
 	<div class="u-head fn-clear">
 		<div class="logo"><span>Static Server</span></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li class="current"><a href="/kingstatic/index.html">底层</a></li>
+			<li class=""><a href="/kingstatic/index.html">底层</a></li>
 			<li class=""><a href="/kingstatic/style.html">样式库</a></li>
-			<li class=""><a href="/kingstatic/module.html">组件</a></li>
+			<li class="current"><a href="/kingstatic/module.html">组件</a></li>
 			<li class=""><a href="/kingstatic/png.html">公用图片</a></li>
 		</ul>
 	</div>
 </div>
 <div class="w-bar fn-mt10">
 	<div class="u-main">
-		<h2><span>CSS底层</span> / base.css</h2>
-		<div class="title fn-mt10">样式调用：</div>
-		<div class="code fn-mt10"><xmp><link rel="stylesheet" href="http://fwowo.github.com/static/css/base.css" /></xmp></div>
-	</div>
-</div>
-<div class="w-bar fn-mt10">
-	<div class="u-main">
-		<h2><span>JS框架</span> / jQuery</h2>
-		<div class="title fn-mt10">脚本调用：</div>
-		<div class="code fn-mt10"><xmp><script src="http://fwowo.github.com/static/js/jquery-1.9.0.min.js"></script></xmp></div>
+		<h2><span>wmvplayer</span> / 播放器</h2>
+		<div class="fn-mt20">
+			<div id="player"></div>
+		</div>
+		<div class="code fn-mt20">
+<xmp><script src="http://fwowo.github.com/static/wmvplayer/silverlight.js"></script>
+<script src="http://fwowo.github.com/static/wmvplayer/wmvplayer.js"></script>
+<script>
+wmvPlayer("player", 600, 400, "mms://LIVE.nbtvu.net.cn/px/xy/xy1.wmv", "http://www.ckplayer.com/images/loadimg.jpg");
+</script></xmp>
+		</div>
 	</div>
 </div>
 <div class="u-foot fn-clear">
@@ -39,6 +40,6 @@
 	<div class="fn-right">xjia.jin@gmail.com</div>
 </div>
 <script src="/static/js/jquery-1.9.0.min.js"></script>
-
+<script src="/static/wmvplayer/silverlight.js"></script><script src="/static/wmvplayer/wmvplayer.js"></script><script src="/static/js/kingstatic/wmvplayer.js"></script>
 </body>
 </html>
