--- a/kingstatic/style.html
+++ b/kingstatic/style.html
@@ -13,17 +13,17 @@
 	<div class="u-head fn-clear">
 		<div class="logo"><span>Static Server</span></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li class=""><a href="index.html">底层</a></li>
-			<li class="current"><a href="style.html">样式库</a></li>
-			<li class=""><a href="module.html">组件</a></li>
-			<li class=""><a href="png.html">公用图片</a></li>
+			<li class=""><a href="/kingstatic/index.html">底层</a></li>
+			<li class="current"><a href="/kingstatic/style.html">样式库</a></li>
+			<li class=""><a href="/kingstatic/module.html">组件</a></li>
+			<li class=""><a href="/kingstatic/png.html">公用图片</a></li>
 		</ul>
 	</div>
 </div>
 <div class="w-bar fn-mt10">
 	<div class="u-main">
-		<div class="title">鏍峰紡搴擄細</div>
-		<div class="note">note</div>
+		<div class="title">样式库：</div>
+		<div class="note">note2</div>
 	</div>
 </div>
 <div class="u-foot fn-clear">
