update wmv xaml

--- a/kingstatic/module/wmvplayer.html
+++ b/kingstatic/module/wmvplayer.html
@@ -30,9 +30,10 @@
 <xmp><script src="http://fwowo.github.com/static/wmvplayer/silverlight.js"></script>
 <script src="http://fwowo.github.com/static/wmvplayer/wmvplayer.js"></script>
 <script>
-wmvPlayer("player", 600, 400, "mms://LIVE.nbtvu.net.cn/px/xy/xy1.wmv", "http://www.ckplayer.com/images/loadimg.jpg");
+wmvPlayer("player", 600, 400, "mms://LIVE.nbtvu.net.cn/px/xy/xy1.wmv", "loadimg.jpg", "/static/wmvplayer/wmvplayer.xaml");
 </script></xmp>
 		</div>
+		<div class="fn-mt10">P.S. wmvplayer.xaml文件需在同域名下才能被引用到</div>
 	</div>
 </div>
 <div class="u-foot fn-clear">
