--- a/kingstatic/module.html
+++ b/kingstatic/module.html
@@ -28,6 +28,12 @@
 			<a target="_blank" href="module/ckplayer.html">ckplayer</a>
 			<a target="_blank" href="module/wmvplayer.html">wmvplayer</a>
 		</div>
+		<div class="fn-clear fn-mt20">
+			<div class="title">²¥·ÅÆ÷£º</div>
+			<a target="_blank" href="module/jwplayer.html">jwplayer</a>
+			<a target="_blank" href="module/ckplayer.html">ckplayer</a>
+			<a target="_blank" href="module/wmvplayer.html">wmvplayer</a>
+		</div>
 	</div>
 </div>
 <div class="u-foot fn-clear">
