--- a/demo/iptv/index.html
+++ b/demo/iptv/index.html
@@ -4,10 +4,10 @@
 <meta charset="gb2312" />
 <title>King</title>
 <link rel="stylesheet" href="/static/css/base.css" />
-<link rel="stylesheet" href="static/css/common.css" />
+<link rel="stylesheet" href="static/css/common.css?r=201" />
 </head>
 <body>
-<div class="u-head"></div>
+<div class="u-head">v2.0.1</div>
 <div class="u-nav">
 	<ul class="fn-clear">
 		<li class="current"><a href="#">首页</a></li>
@@ -26,9 +26,35 @@
 	</ul>
 </div>
 <div class="u-main fn-clear">
-	<div class="news"></div>
-	<div class="tv"></div>
+	<div class="news"> 
+		<div class="newslist">
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">新华社推李克强人物特稿</a></p>
+		</div>
+		<div class="bottommore"><a href="#"></a></div>
+	</div>
+	<div class="tv">
+		<div class="tvpic">
+			<a class="play" href="#"></a>
+			<img src="static/img/pic.jpg">
+		</div>
+	</div>
 </div>
-<div class="u-bottom"></div>
+<div class="u-bottom">
+	<ul class="fn-clear">
+		<li><a href="#"><img src="static/img/pic.jpg"></a></li>
+		<li><a href="#"><img src="static/img/pic.jpg"></a></li>
+		<li><a href="#"><img src="static/img/pic.jpg"></a></li>
+		<li><a href="#"><img src="static/img/pic.jpg"></a></li>
+		<li><a href="#"><img src="static/img/pic.jpg"></a></li>
+	</ul>
+</div>
 </body>
 </html>
