--- a/demo/iptv/index.html
+++ b/demo/iptv/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="gb2312" />
 <title>King</title>
-<link rel="stylesheet" href="/static/css/base.css" />
-<link rel="stylesheet" href="static/css/common.css?r=201" />
+<link rel="stylesheet" href="static/css/base.css?r=202" />
+<link rel="stylesheet" href="static/css/common.css?r=202" />
 </head>
 <body>
-<div class="u-head">v2.0.1</div>
+<div class="u-head">v2.0.2</div>
 <div class="u-nav">
 	<ul class="fn-clear">
 		<li class="current"><a href="#">首页</a></li>
@@ -38,11 +38,11 @@
 			<p><a href="#">新华社推李克强人物特稿</a></p>
 			<p><a href="#">新华社推李克强人物特稿</a></p>
 		</div>
-		<div class="bottommore"><a href="#"></a></div>
+		<div class="bottommore"><a href="#"><img src="static/img/more.gif"></a></div>
 	</div>
 	<div class="tv">
 		<div class="tvpic">
-			<a class="play" href="#"></a>
+			<a class="play" href="#"><img src="static/img/play.png"></a>
 			<img src="static/img/pic.jpg">
 		</div>
 	</div>
