--- a/demo/iptv/index.html
+++ b/demo/iptv/index.html
@@ -10,19 +10,19 @@
 <div class="u-head">v2.0.3</div>
 <div class="u-nav">
 	<ul class="fn-clear">
-		<li class="current"><a href="#">首页</a></li>
+		<li class="current"><span><a href="#">首页</a></span></li>
 		<li class="line"></li>
-		<li><a href="#">国内</a></li>
+		<li><span><a href="#">国内</a></span></li>
 		<li class="line"></li>
-		<li><a href="#">国际</a></li>
+		<li><span><a href="#">国际</a></span></li>
 		<li class="line"></li>
-		<li><a href="#">安徽</a></li>
+		<li><span><a href="#">安徽</a></span></li>
 		<li class="line"></li>
-		<li><a href="#">财经</a></li>
+		<li><span><a href="#">财经</a></span></li>
 		<li class="line"></li>
-		<li><a href="#">推荐</a></li>
+		<li><span><a href="#">推荐</a></span></li>
 		<li class="line"></li>
-		<li><a href="#">人文</a></li>
+		<li><span><a href="#">人文</a></span></li>
 	</ul>
 </div>
 <div class="u-main fn-clear">
