--- a/demo/iptv/index.html
+++ b/demo/iptv/index.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="gb2312" />
 <title>King</title>
-<link rel="stylesheet" href="static/css/base.css?r=203" />
-<link rel="stylesheet" href="static/css/common.css?r=203" />
+<link rel="stylesheet" href="static/css/base.css?r=204" />
+<link rel="stylesheet" href="static/css/common.css?r=204" />
 </head>
 <body>
-<div class="u-head">v2.0.3</div>
+<div class="u-head">
+	<div class="marquee"><marquee>据悉，"速生鸡"事件波及北京吉野家</marquee></div>
+</div>
 <div class="u-nav">
 	<ul class="fn-clear">
 		<li class="current"><span><a href="#">首页</a></span></li>
@@ -28,7 +30,7 @@
 <div class="u-main fn-clear">
 	<div class="news"> 
 		<div class="newslist">
-			<p><a href="#">新华社推李克强人物特稿</a></p>
+			<p><a href="#">V2.0.4</a></p>
 			<p><a href="#">新华社推李克强人物特稿</a></p>
 			<p><a href="#">新华社推李克强人物特稿</a></p>
 			<p><a href="#">新华社推李克强人物特稿</a></p>
