--- a/demo/iptv/index.html
+++ b/demo/iptv/index.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="gb2312" />
 <title>King</title>
-<link rel="stylesheet" href="static/css/base.css?r=204" />
-<link rel="stylesheet" href="static/css/common.css?r=204" />
+<link rel="stylesheet" href="static/css/base.css?r=205" />
+<link rel="stylesheet" href="static/css/common.css?r=205" />
 </head>
 <body>
 <div class="u-head">
-	<div class="marquee"><marquee>据悉，"速生鸡"事件波及北京吉野家</marquee></div>
+	<div class="marquee">
+		<div class="content"><marquee>据悉，"速生鸡"事件波及北京吉野家</marquee></div>
+	</div>
 </div>
 <div class="u-nav">
 	<ul class="fn-clear">
@@ -30,7 +32,7 @@
 <div class="u-main fn-clear">
 	<div class="news"> 
 		<div class="newslist">
-			<p><a href="#">V2.0.4</a></p>
+			<p><a href="#">V2.0.5</a></p>
 			<p><a href="#">新华社推李克强人物特稿</a></p>
 			<p><a href="#">新华社推李克强人物特稿</a></p>
 			<p><a href="#">新华社推李克强人物特稿</a></p>
