--- a/demo/kf_tab1.html
+++ b/demo/kf_tab1.html
@@ -79,7 +79,8 @@
 <script>
 kf.use('tab1.0', function(){
 	var tab = new kf.tab('kj-tab', {
-		'eventType': 'click'
+		eventType: 'mouseover',
+		index: 0
 	});
 });
 </script></xmp>
@@ -91,7 +92,8 @@ kf.use('tab1.0', function(){
 kf['host'] = '';
 kf.use('tab1.0', function(){
 	var tab = new kf.tab('kj-tab', {
-		'eventType': 'click'
+		eventType: 'mouseover',
+		index: 0
 	});
 });
 </script>
