--- a/demo/kf_slide1.html
+++ b/demo/kf_slide1.html
@@ -61,8 +61,8 @@
 		</ul>
 	</div>
 </div>
-<script src="/static/js/jquery-1.9.0.min.js"></script>
-<script src="/static/kf/kf.js"></script>
+<script src="http://fwowo.github.io/static/js/jquery-1.9.0.min.js"></script>
+<script src="http://fwowo.github.io/static/kf/kf.js"></script>
 <script>
 kf.use('slide1.0', function(){
 	var slide = new kf.slide('kj-slide', {
