--- a/demo/kf_slide1.html
+++ b/demo/kf_slide1.html
@@ -33,6 +33,7 @@
 	border-radius: 50%;
 	background-color: #333;
 	text-indent: -99px;
+	overflow: hidden;
 }
 .kf-slide-icon li.current{
 	background-color: #f60;
