--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 <link rel="stylesheet" href="/static/css/index.css" />
 </head>
 <body>
-<div class="u-wrap fn-clear">
-	<div class="u-td"></div>
+<div id="kj-waterfall">
+	<div class="u-wrap fn-clear">
+		<div class="u-td kf-waterfall-column"></div>
+	</div>
+	<textarea class="kf-waterfall-model fn-hide"><div class="wrap"><div class="contain"><div class="pic"><a target="_blank" href="{$href}"><img src="{$img}"></a></div><div class="title">{$title}</div></div></div></textarea>
 </div>
 <script src="/static/js/jquery-1.9.0.min.js"></script>
+<script src="/static/kf/kf.js"></script>
 <script src="/static/js/index.js"></script>
 </body>
 </html>
