--- a/photo/index.html
+++ b/photo/index.html
@@ -28,6 +28,7 @@
 				<p><a href="#"><img src="img/jpeg.png"></a></p>
 				<p>Õº∆¨º”‘ÿ ß∞‹</p>
 			</div>
+			<div class="success fn-hide"></div>
 		</div>
 	</div>
 </div>
