--- a/code/demo/kf_waterfall1.html
+++ b/code/demo/kf_waterfall1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="gb2312" />
-<title>fwowo.com</title>
+<title>代码库</title>
 <link rel="shortcut icon" type="image/x-icon" href="/common/f.ico" />
 <link rel="stylesheet" href="/common/base.css" />
 <link rel="stylesheet" href="../demo.css" />
