--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="u-site">fwowo.com</div>
 <div class="u-nav fn-clear">
 	<textarea id="kj-nav" class="fn-hide">
-	<a href="{$href}" style="background-image: url({$img});"></a>
+	<a target="_blank" href="{$href}" style="background-image: url({$img});"></a>
 	</textarea>
 </div>
 <div class="u-topic">
