--- a/menu/m.html
+++ b/menu/m.html
@@ -27,7 +27,7 @@
 				<span class="totalprice">小计：<em id="kj-cart-price"></em>元</span>
 			</div>
 			<div class="btn fn-clear">
-				<a id="kj-cart-sharebtn" href="javascript:void(0)">ddd</a>
+				<a id="kj-cart-sharetemp" href="javascript:void(0)" title="发送微博@好友" class="fn-hide">发送微博</a>
 				<a id="kj-cart-share" href="javascript:void(0)" title="发送微博@好友">发送微博</a>
 				<a id="kj-cart-url" href="javascript:void(0)" title="生成菜单地址">菜单地址</a>
 			</div>
