--- a/menu/m.html
+++ b/menu/m.html
@@ -15,8 +15,7 @@
 			<ul id="kj-cart-wrap">
 				<textarea id="kj-cart-item">
 				<li class="fn-clear">
-					<span>{$id}</span>
-					<span>{$title}</span>
+					<span class="title">{$title}</span>
 					<span class="del"><a href="#" data-id="{$id}"></a></span>
 					<span class="price">гд{$price}</span>
 				</li>
