--- a/music/index.html
+++ b/music/index.html
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	<div class="list fn-mt20">
-		<div class="listtitle">歌曲列表：</div>
+		<div class="listtitle">歌曲列表</div>
 		<ul>
 			<textarea id="kj-song-model" class="fn-hide">
 			<li class="kj-songid-{$id}" data-id="{$id}">
@@ -63,7 +63,7 @@
 <!-- 我的歌单 -->
 <div class="u-song kj-mysong fn-mt30 fn-hide">
 	<div class="list">
-		<div class="listtitle">歌曲列表：</div>
+		<div class="listtitle">歌曲列表<em>（我的歌单最多可添加100首歌曲）</em></div>
 		<ul>
 			<textarea id="kj-mysong-model" class="fn-hide">
 			<li class="kj-mysongid-{$id}" data-id="{$id}">
@@ -76,7 +76,6 @@
 			</li>
 			</textarea>
 		</ul>
-		<div class="u-page kj-mysong-page fn-clear"></div>
 	</div>
 </div>
 <div class="u-foot fn-mt30 fn-clear">
@@ -85,6 +84,6 @@
 </div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
 <script charset="utf-8" src="/kf/kf.js"></script>
-<script charset="utf-8" src="index.js"></script>
+<script charset="utf-8" src="index_v1.1.js"></script>
 </body>
 </html>
