--- a/trip/index.html
+++ b/trip/index.html
@@ -14,9 +14,8 @@
 	<div class="contain fn-clear">
 		<div class="date">{$date}</div>
 		<div class="content">
-			<div class="title"><a href="{$href}">{$title} <em>{$em}</em></a></div>
-			<div class="init fn-hide"></div>
-			<ul class="kj-img" data-img="{$img}" data-href="{$href}"></ul>
+			<div class="title"><a target="_blank" href="p.html?sign={$sign}">{$title} <em>{$em}</em></a></div>
+			<ul class="kj-img fn-clear" data-img="{$img}"></ul>
 		</div>
 	</div>
 	</textarea>
@@ -29,7 +28,6 @@
 	<div class="fn-left"><a href="/">http://www.fwowo.com</a></div>
 	<div class="fn-right">xjia.jin@gmail.com</div>
 </div>
-<div id="kj-mask" class="fn-hide"></div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
 <script charset="utf-8" src="/kf/kf.js"></script>
 <script charset="utf-8" src="index.js"></script>
