--- a/trip/p.html
+++ b/trip/p.html
@@ -11,9 +11,10 @@
 <div class="u-head">
 	<div class="wrap fn-clear">
 		<a href="#" class="back">返回列表</a>
-		<span class="title">南麂岛</span>
+		<span class="title"></span>
 	</div>
 </div>
+<div class="u-headtemp"></div>
 <div class="u-wrap">
 	<div id="kj-content" class="contain"></div>
 </div>
