--- a/message/index.html
+++ b/message/index.html
@@ -21,11 +21,13 @@
 <script>
 WB2.anyWhere(function(W){
 	W.widget.publish({
-		toolbar:"face,image",
+		action: "pubilish",
+		type: "web",
+		language: "zh_cn",
 		button_type: "red",
-		button_size: "middle",
-		default_text: "@–°º—v∂‡∂‡",
-		button_text: "¡Ù—‘",
+		button_size: "big",
+		uid: "2479837202",
+		appkey: "3006087460",
 		id: "wb_publisher"
 	});
 });
