--- a/message/index.html
+++ b/message/index.html
@@ -23,9 +23,9 @@
 <script>
 WB2.anyWhere(function(W){
 	W.widget.publish({
-		toolbar: "face,image",
-		uid: "2479837202",
-		id: "wb_publisher"
+		id: "kj-cart-share",
+		default_text: "@Ð¡¼Ñv¶à¶à ",
+		refer: "n"
 	});
 });
 </script>
