--- a/message/index.html
+++ b/message/index.html
@@ -23,7 +23,7 @@
 <script>
 WB2.anyWhere(function(W){
 	W.widget.publish({
-		id: "kj-cart-share",
+		id: "wb_publisher",
 		default_text: "@Ð¡¼Ñv¶à¶à ",
 		refer: "n"
 	});
