--- a/code/index.html
+++ b/code/index.html
@@ -5,21 +5,23 @@
 <title>´úÂë¿â</title>
 <link rel="shortcut icon" type="image/x-icon" href="/common/f.ico" />
 <link rel="stylesheet" href="/common/base.css" />
+<link rel="stylesheet" href="/common/common.css" />
 <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-<div id="kj-waterfall">
-	<div class="u-wrap fn-clear">
-		<div class="u-td kf-waterfall-column"></div>
+<div class="kc-head"></div>
+<div class="kc-body">
+	<div id="kj-waterfall">
+		<div class="u-wrap fn-clear">
+			<div class="u-td kf-waterfall-column"></div>
+		</div>
+		<textarea class="kf-waterfall-model fn-hide"><div class="wrap"><div class="contain"><div class="pic"><a target="_blank" href="{$href}"><img src="{$img}"></a></div><div class="title">{$title}</div></div></div></textarea>
 	</div>
-	<textarea class="kf-waterfall-model fn-hide"><div class="wrap"><div class="contain"><div class="pic"><a target="_blank" href="{$href}"><img src="{$img}"></a></div><div class="title">{$title}</div></div></div></textarea>
 </div>
-<div class="u-foot fn-mt20 fn-clear">
-	<div class="fn-left"><a href="/">http://www.fwowo.com</a></div>
-	<div class="fn-right">xjia.jin@gmail.com</div>
-</div>
-<script src="/common/jquery-1.9.0.min.js"></script>
-<script src="/kf/kf.js"></script>
-<script src="index.js"></script>
+<div class="kc-foot"></div>
+<script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
+<script charset="utf-8" src="/common/common.js"></script>
+<script charset="utf-8" src="/kf/kf.js"></script>
+<script charset="utf-8" src="index.js"></script>
 </body>
 </html>
