--- a/trip/p.html
+++ b/trip/p.html
@@ -5,24 +5,20 @@
 <title>旅游</title>
 <link rel="shortcut icon" type="image/x-icon" href="/common/f.ico" />
 <link rel="stylesheet" href="/common/base.css" />
+<link rel="stylesheet" href="/common/common.css" />
 <link rel="stylesheet" href="p.css" />
 </head>
 <body>
-<div class="u-head">
-	<div class="wrap fn-clear">
-		<a href="#" class="back">返回列表</a>
-		<span class="title"></span>
+<div class="kc-head"></div>
+<div class="kc-body">
+	<div class="u-wrap">
+		<h1></h1>
+		<div id="kj-content" class="contain"></div>
 	</div>
 </div>
-<div class="u-headtemp"></div>
-<div class="u-wrap">
-	<div id="kj-content" class="contain"></div>
-</div>
-<div class="u-foot fn-mt30 fn-clear">
-	<div class="fn-left"><a href="/">http://www.fwowo.com</a></div>
-	<div class="fn-right">xjia.jin@gmail.com</div>
-</div>
+<div class="kc-foot"></div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
+<script charset="utf-8" src="/common/common.js"></script>
 <script charset="utf-8" src="p.js"></script>
 </body>
 </html>
