--- a/index.html
+++ b/index.html
@@ -5,29 +5,33 @@
 <title>·èÎÑÀïµÄ¹ÊÊÂ</title>
 <link rel="shortcut icon" type="image/x-icon" href="/common/f.ico" />
 <link rel="stylesheet" href="/common/base.css" />
+<link rel="stylesheet" href="/common/common.css" />
 <link rel="stylesheet" href="index/index.css" />
 </head>
 <body>
-<div class="u-site">fwowo.com</div>
-<div class="u-nav fn-clear">
-	<textarea id="kj-nav" class="fn-hide">
-	<a target="_blank" href="{$href}" style="background-image: url({$img});"></a>
-	</textarea>
+<div class="kc-head"></div>
+<div class="kc-body">
+	<div class="u-nav">
+		<div class="wrap fn-clear"></div>
+		<textarea id="kj-nav" class="fn-hide">
+		<a href="{$href}" style="background-image: url({$img});"></a>
+		</textarea>
+	</div>
+	<div class="u-topic">
+		<div class="wrap">
+			<ul class="fn-clear"></ul>
+			<textarea id="kj-topic" class="fn-hide">
+			<li>
+				<div class="pic"><a target="_blank" href="{$href}"><img src="{$img}"></a></div>
+				<div class="note"><a target="_blank" href="{$href}">{$title}</a></div>
+			</li>
+			</textarea>
+		</div>
+	</div>
 </div>
-<div class="u-topic">
-	<ul class="fn-clear"></ul>
-	<textarea id="kj-topic" class="fn-hide">
-	<li>
-		<div class="pic"><a target="_blank" href="{$href}"><img src="{$img}"></a></div>
-		<div class="note"><a target="_blank" href="{$href}">{$title}</a></div>
-	</li>
-	</textarea>
-</div>
-<div class="u-foot">
-	<div class="fn-left">http://www.fwowo.com</div>
-	<div class="fn-right">xjia.jin@gmail.com</div>
-</div>
+<div class="kc-foot"></div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
+<script charset="utf-8" src="/common/common.js"></script>
 <script charset="utf-8" src="index/index.js"></script>
 </body>
 </html>
