--- a/menu/m.html
+++ b/menu/m.html
@@ -56,7 +56,7 @@
 	<div class="fn-left"><a href="/">http://www.fwowo.com</a></div>
 	<div class="fn-right">xjia.jin@gmail.com</div>
 </div>
-<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=3006087460"></script>
+<script charset="utf-8" src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=3006087460"></script>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
 <script charset="utf-8" src="/kf/kf.js"></script>
 <script charset="utf-8" src="m.js"></script>
