--- a/music/index.html
+++ b/music/index.html
@@ -5,84 +5,85 @@
 <title>听音乐</title>
 <link rel="shortcut icon" type="image/x-icon" href="/common/f.ico" />
 <link rel="stylesheet" href="/common/base.css" />
+<link rel="stylesheet" href="/common/common.css" />
 <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-<div class="u-player">
-	<div class="wrap fn-clear">
-		<div class="bar player"><audio id="kj-audio" controls></audio></div>
-		<div class="bar title"></div>
-		<a class="btn kj-mysong-btn fn-hide" href="javascript:void(0)">我的歌单</a>
-		<a class="btn kj-topic-btn fn-hide" href="javascript:void(0)">更多歌单</a>
-	</div>
-</div>
-<div class="u-playertemp"></div>
-<!-- 歌单列表 -->
-<div class="u-topic kj-topic">
-	<ul class="fn-clear">
-		<textarea id="kj-topic-model" class="fn-hide">
-		<li>
-			<div class="contain">
-				<div class="author">{$author}</div>
-				<div class="title">{$title}</div>
-				<img src="{$img}">
-			</div>
-		</li>
-		</textarea>
-	</ul>
-	<div class="u-page kj-topic-page fn-clear"></div>
-</div>
-<!-- 歌曲列表 -->
-<div class="u-song kj-song fn-mt10 fn-hide">
-	<div class="back fn-clear"><a href="javascript:void(0)">返回歌单图列</a></div>
-	<div class="topic fn-clear">
-		<div class="pic"></div>
-		<div class="contain">
-			<div class="author"></div>
-			<div class="title"></div>
-			<div class="content"></div>
+<div class="kc-head"></div>
+<div class="kc-body">
+	<div class="u-player">
+		<div class="wrap fn-clear">
+			<div class="bar player"><audio id="kj-audio" controls></audio></div>
+			<div class="bar title"></div>
+			<a class="btn kj-mysong-btn fn-hide" href="javascript:void(0)">我的歌单</a>
+			<a class="btn kj-topic-btn fn-hide" href="javascript:void(0)">更多歌单</a>
 		</div>
 	</div>
-	<div class="list fn-mt20">
-		<div class="listtitle">歌曲列表</div>
-		<ul>
-			<textarea id="kj-song-model" class="fn-hide">
-			<li class="kj-songid-{$id}" data-id="{$id}">
-				<span>{$index}.</span>
-				<span class="title">{$title}</span>
-				<a target="_blank" href="{$mp3}" class="download" title="右键链接另存下载歌曲"></a>
-				<a href="javascript:void(0)" class="add" title="放进我的歌单"></a>
-				<a href="javascript:void(0)" class="play" title="播放"></a>
-				<div class="tip" style="display:none;">添加成功</div>
+	<!-- 歌单列表 -->
+	<div class="u-topic kj-topic">
+		<ul class="fn-clear">
+			<textarea id="kj-topic-model" class="fn-hide">
+			<li>
+				<div class="contain">
+					<div class="author">{$author}</div>
+					<div class="title">{$title}</div>
+					<img src="{$img}">
+				</div>
 			</li>
 			</textarea>
 		</ul>
-		<div class="u-page kj-song-page fn-clear"></div>
+		<div class="u-page kj-topic-page fn-clear"></div>
+	</div>
+	<!-- 歌曲列表 -->
+	<div class="u-song kj-song fn-mt10 fn-hide">
+		<div class="back fn-clear"><a href="javascript:void(0)">返回歌单图列</a></div>
+		<div class="topic fn-clear">
+			<div class="pic"></div>
+			<div class="contain">
+				<div class="author"></div>
+				<div class="title"></div>
+				<div class="content"></div>
+			</div>
+		</div>
+		<div class="list fn-mt20">
+			<div class="listtitle">歌曲列表</div>
+			<ul>
+				<textarea id="kj-song-model" class="fn-hide">
+				<li class="kj-songid-{$id}" data-id="{$id}">
+					<span>{$index}.</span>
+					<span class="title">{$title}</span>
+					<a target="_blank" href="{$mp3}" class="download" title="右键链接另存下载歌曲"></a>
+					<a href="javascript:void(0)" class="add" title="放进我的歌单"></a>
+					<a href="javascript:void(0)" class="play" title="播放"></a>
+					<div class="tip" style="display:none;">添加成功</div>
+				</li>
+				</textarea>
+			</ul>
+			<div class="u-page kj-song-page fn-clear"></div>
+		</div>
+	</div>
+	<!-- 我的歌单 -->
+	<div class="u-song kj-mysong fn-mt30 fn-hide">
+		<div class="list">
+			<div class="listtitle">歌曲列表<em>（我的歌单最多可添加100首歌曲）</em></div>
+			<ul>
+				<textarea id="kj-mysong-model" class="fn-hide">
+				<li class="kj-mysongid-{$id}" data-id="{$id}">
+					<span>{$index}.</span>
+					<span class="title">{$title}</span>
+					<span class="author">{$author}</span>
+					<a target="_blank" href="{$mp3}" class="download" title="右键链接另存下载歌曲"></a>
+					<a href="javascript:void(0)" class="del" title="移出我的歌单"></a>
+					<a href="javascript:void(0)" class="play" title="播放"></a>
+				</li>
+				</textarea>
+			</ul>
+		</div>
 	</div>
 </div>
-<!-- 我的歌单 -->
-<div class="u-song kj-mysong fn-mt30 fn-hide">
-	<div class="list">
-		<div class="listtitle">歌曲列表<em>（我的歌单最多可添加100首歌曲）</em></div>
-		<ul>
-			<textarea id="kj-mysong-model" class="fn-hide">
-			<li class="kj-mysongid-{$id}" data-id="{$id}">
-				<span>{$index}.</span>
-				<span class="title">{$title}</span>
-				<span class="author">{$author}</span>
-				<a target="_blank" href="{$mp3}" class="download" title="右键链接另存下载歌曲"></a>
-				<a href="javascript:void(0)" class="del" title="移出我的歌单"></a>
-				<a href="javascript:void(0)" class="play" title="播放"></a>
-			</li>
-			</textarea>
-		</ul>
-	</div>
-</div>
-<div class="u-foot fn-mt30 fn-clear">
-	<div class="fn-left"><a href="/">http://www.fwowo.com</a></div>
-	<div class="fn-right">xjia.jin@gmail.com</div>
-</div>
+<div class="kc-foot"></div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
+<script charset="utf-8" src="/common/common.js"></script>
 <script charset="utf-8" src="/kf/kf.js"></script>
 <script charset="utf-8" src="index_v1.1.js"></script>
 </body>
