--- a/wallpaper/index.html
+++ b/wallpaper/index.html
@@ -26,15 +26,17 @@
 		<div class="kf-list-page u-page fn-clear"><textarea class="kf-list-pagemodel fn-hide"><a href="javascript:void(0)">{$page}</a></textarea></div>
 	</div>
 	<!-- 列表 -->
-	<div id="kj-item" class="fn-hide">
-		<div class="u-back"><a href="javascript:showList()">壁纸列表</a> &gt;&gt; <em></em></div>
-		<div class="u-wrap fn-clear">
-			<div class="u-td kf-waterfall-column"></div>
-			<div class="u-td kf-waterfall-column"></div>
-			<div class="u-td kf-waterfall-column"></div>
-			<div class="u-td kf-waterfall-column"></div>
+	<div id="kj-item-wrap">
+		<div id="kj-item" class="kj-item-sign fn-hide">
+			<div class="u-back"><a href="javascript:showList()">壁纸列表</a> &gt;&gt; <em></em></div>
+			<div class="u-wrap fn-clear">
+				<div class="u-td kf-waterfall-column"></div>
+				<div class="u-td kf-waterfall-column"></div>
+				<div class="u-td kf-waterfall-column"></div>
+				<div class="u-td kf-waterfall-column"></div>
+			</div>
+			<textarea class="kf-waterfall-model fn-hide"><div class="wrap"><div class="pic"><a target="_blank" href="full.html#{$id}"><img src="{$img}"></a></div></div></textarea>
 		</div>
-		<textarea class="kf-waterfall-model fn-hide"><div class="wrap"><div class="pic"><a target="_blank" href="full.html#{$id}"><img src="{$img}"></a></div></div></textarea>
 	</div>
 </div>
 <div class="kc-foot"></div>
