--- a/message/index.html
+++ b/message/index.html
@@ -18,9 +18,10 @@
 </div>
 <div class="kc-foot"></div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
-<script charset="utf-8" src="/common/common.js"></script>
+<script charset="utf-8" src="/kf/kf.js"></script>
 <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=3006087460" charset="utf-8"></script>
 <script>
+kf.use('common1.0', function(){});
 WB2.anyWhere(function(W){
 	W.widget.publish({
 		id: "wb_publisher",
