--- a/wallpaper/full.html
+++ b/wallpaper/full.html
@@ -20,7 +20,7 @@
 </div>
 <div class="kc-foot"></div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
-<script charset="utf-8" src="/common/common.js"></script>
+<script charset="utf-8" src="/kf/kf.js"></script>
 <script charset="utf-8" src="full.js"></script>
 </body>
 </html>
