--- a/cook/index.html
+++ b/cook/index.html
@@ -5,40 +5,42 @@
 <title>ÏÂ³ø</title>
 <link rel="shortcut icon" type="image/x-icon" href="/common/f.ico" />
 <link rel="stylesheet" href="/common/base.css" />
+<link rel="stylesheet" href="/common/common.css" />
 <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-<div id="kj-nav" class="u-nav fn-clear"></div>
-<div id="kj-wrap">
-	<textarea id="kj-model">
-	<div class="kj-tr fn-hide">
-		<h2>{$class}</h2>
-		<div class="u-wrap fn-clear">
-			<div class="u-td"></div>
-			<div class="u-td"></div>
-			<div class="u-td"></div>
-			<div class="u-td"></div>
+<div class="kc-head"></div>
+<div class="kc-body">
+	<div id="kj-nav" class="u-nav fn-clear"></div>
+	<div id="kj-wrap">
+		<textarea id="kj-model">
+		<div class="kj-tr fn-hide">
+			<h2>{$class}</h2>
+			<div class="u-wrap fn-clear">
+				<div class="u-td"></div>
+				<div class="u-td"></div>
+				<div class="u-td"></div>
+				<div class="u-td"></div>
+			</div>
 		</div>
+		</textarea>
+		<textarea id="kj-item">
+		<div class="wrap">
+			<img src="{$img}">
+			<div class="mask"></div>
+			<div class="content">{$title}<em>{$em}</em></div>
+		</div>
+		</textarea>
 	</div>
-	</textarea>
-	<textarea id="kj-item">
-	<div class="wrap">
-		<img src="{$img}">
-		<div class="mask"></div>
-		<div class="content">{$title}<em>{$em}</em></div>
-	</div>
-	</textarea>
 </div>
+<div class="kc-foot"></div>
 <div class="layer-bg fn-hide"></div>
 <div class="layer fn-hide">
 	<div class="u-close"><a href="#">¹Ø±Õ´°¿Ú</a></div>
 	<div id="kj-box" class="u-boxwrap"></div>
 </div>
-<div class="u-foot fn-mt20 fn-clear">
-	<div class="fn-left"><a href="/">http://www.fwowo.com</a></div>
-	<div class="fn-right">xjia.jin@gmail.com</div>
-</div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
+<script charset="utf-8" src="/kf/kf.js"></script>
 <script charset="utf-8" src="index.js"></script>
 </body>
 </html>
