--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <div class="kc-foot"></div>
 <script charset="utf-8" src="/common/jquery-1.9.0.min.js"></script>
-<script charset="utf-8" src="/common/common.js"></script>
+<script charset="utf-8" src="/kf/kf.js"></script>
 <script charset="utf-8" src="index/index.js"></script>
 </body>
 </html>
