--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="/common/f.ico" />
 <link rel="stylesheet" href="/common/base.css" />
 <link rel="stylesheet" href="/common/common.css" />
-<link rel="stylesheet" href="index/index.css" />
+<link rel="stylesheet" href="/index/index.css" />
 </head>
 <body>
 <div class="kc-head"></div>
